--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                   <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
       
                   <button class="form-btn" type="submit" disabled data-form-btn>
-                    <ion-icon name="paper-plane"></ion-icon>
+                    <i class="fa-solid fa-paper-plane"></i>
                     <span>Send Message</span>
                   </button>
       
