--- a/index.html
+++ b/index.html
@@ -38,20 +38,21 @@
           <aside class="sidebar" info-sidebar>
             <div class="sidebare-info">
               <figure class="avatar-box">
-                <!-- change the pic  -->
                 <img src="./pics/avatar2.png" alt="Fatemah Bahzad" width="80"> 
+
               </figure>
 
               <div class="info-contact">
                 <h1 class="name" title="Fatemah Bahzad"> Fatemah Bahzad</h1>
-                <div class="separator"></div>
+                <!-- <div class="separator"></div> -->
                 <p class="title">Computer Engineer</p>
               </div>
-
               <button class="info_more-btn" info-btn>
                 <span>Show Contacts</span>
                 <i class="fa-solid fa-chevron-down"></i>
               </button>
+
+              
             </div>
             <div class="sidebar-info_more">
               
@@ -142,7 +143,7 @@
                     <p class="about-me-item">
                   Hello there! I'm thrilled to welcome you to my portfolio. 
                   I'm Fatemah, a recent Computer Engineering graduate from George Mason 
-                  University with a burning passion for coding and an insatiable appetite for 
+                  University with a passion for coding and an insatiable appetite for 
                   learning. I believe in the power of technology to shape our world and solve 
                   complex challenges, and I'm excited to share my journey with you.
                 </p>
