--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <div class="mySlides fade">
                     <div class="numbertext">1 / 5</div>
                     <div class="text">
-                    <p class="about-me-title">About Me: Aspiring Computer Engineer and Web Developer</p>
+                    <p class="about-me-title">Aspiring Computer Engineer and Web Developer</p>
                     <p class="about-me-item">
                   Hello there! I'm thrilled to welcome you to my portfolio. 
                   I'm Fatemah, a recent Computer Engineering graduate from George Mason 
