--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <div class="mySlides fade">
                     <div class="numbertext">1 / 5</div>
                     <div class="text">
-                    <p class="about-me-title">About Me: Aspiring Computer Engineer and Web Developer</p>
+                    <p class="about-me-title">Aspiring Computer Engineer and Web Developer</p>
                     <p class="about-me-item">
                   Hello there! I'm thrilled to welcome you to my portfolio. 
                   I'm Fatemah, a recent Computer Engineering graduate from George Mason 
@@ -356,6 +356,12 @@
                             </div>
                             <h5 class="icon-title">JavaScript</h5>
                           </div>
+                          <div class="item-inner">
+                            <div class="item-icon">
+                              <i class="fa-brands fa-react"></i>
+                              </div>
+                              <h5 class="icon-title">React</h5>
+                            </div>
 
                           <div class="item-inner">
                             <div class="item-icon">
@@ -419,6 +425,29 @@
                         </div>
                         <h5 class="icon-title">Github</h5>
                       </div>
+                      
+                      <div class="item-inner">
+                        <div class="item-icon">
+                          <i class="fa-brands fa-git"></i>
+                        </div>
+                        <h5 class="icon-title">Git</h5>
+                      </div>
+                      
+                      <div class="item-inner">
+                        <div class="item-icon">
+                          <i class="fa-solid fa-e"></i>
+                        </div>
+                        <h5 class="icon-title">Eclipse IDE</h5>
+                      </div>
+
+                      <div class="item-inner">
+                        <div class="item-icon">
+                          <i class="fa-solid fa-v"></i>
+                        </div>
+                        <h5 class="icon-title">VScode IDE</h5>
+                      </div>
+
+
 
                     </div>
                   </div>
