--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <h1 class="name" title="Fatemah Bahzad"> Fatemah Bahzad</h1>
                 
                 <p class="title">Computer Engineer</p>
+                <a href="https://drive.google.com/file/d/1qbYAvds7Me8KyVS7PcqvnbiJuG8lmmEx/view?usp=drive_link" download="Fatemah-bahzad-resume.pdf">
+                  <p class="download">Download Resume</p>
+              </a>
                 <div class="separator"></div>
               </div>
               <!-- <button class="info_more-btn" info-btn>
@@ -464,6 +467,7 @@
             <article class="portfolio" data-page="portfolio">
               <header>
                 <h2 class="h2 artical-title">Portfolio</h2>
+
               </header>
               <section claass="projects">
                 <ul class="filter-list">
@@ -625,61 +629,3 @@
 
 </html>
 
-
-<!-- 
-<!DOCTYPE html>
-<html>
-<head>
-  <title>My Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>My Portfolio</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Write something about yourself here.</p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Project 1</h3>
-      <p>Description of project 1.</p>
-    </div>
-    <div class="project">
-      <h3>Project 2</h3>
-      <p>Description of project 2.</p>
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <form>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" required></textarea>
-
-      <input type="submit" value="Send">
-    </form>
-  </section>
-
-  <footer>
-    <p>&copy; 2023 My Portfolio. All rights reserved.</p>
-  </footer>
-</body>
-</html>  -->
